# calculation_node

./: CMakeLists.txt  README.md  package.xml  params.txt
include/: thread_pool.hpp  utils.h
include/libfacedetection/: facedetectcnn.h
include/pi_robot/: motion_publisher.hpp  photoComposer.hpp  robotBase.hpp  thread_pool.hpp
src/: image_subscriber.cpp  photoComposer.cpp  statistics.py  test.cpp  test_k4a.cpp
src/libfacedetection/: facedetectcnn-model.cpp  facedetectcnn.cpp
src/ultraface/: ultraface.cpp
srv/: SrvState.srv
